--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ scala:
   - 2.12.6
 
 script:
-  - sbt clean coverage test coverageReport
+  - sbt clean coverage test
 
 after_success:
-  - bash <(curl -s https://codecov.io/bash) -t ccd173d3-26b6-4a3c-9103-9b2516fa6dca
+  - sbt coverageReport coveralls
